# eth-pbs

./: .gitignore  README.md
docs/: MassSpringSystems.mw
exercises/ex1/ex1_code_framework/: Exercise.cpp  Exercise1.sln  Exercise1.vcproj  LinSys.cpp  LinSys.h  Makefile.linux  Makefile.mac  Primitives.cpp  Primitives.h  Scene.cpp  Scene.cpp~  Scene.h  Vec2.cpp  Vec2.h  compute_errors.py  exercise1_linux  log.txt  main.cpp  main.cpp~  output_stability_analysis.txt
exercises/ex1/final/: Exercise.cpp  final.rar
exercises/ex1/report/: analytic_solution.mw  error_convergence_analysis.csv  error_convergence_analysis.xlsx  error_convergence_analysis_displacement.csv  error_convergence_analysis_velocity.csv  ex1.aux  ex1.bbl  ex1.blg  ex1.dvi  ex1.tex  make.sh  stability_analysis.csv  stability_analysis.xlsx  stability_analysis_average_error.csv  stability_analysis_average_error_displacement.csv  stability_analysis_average_error_velocity.csv
exercises/ex2/FINAL/: SimpleFEM.cpp
exercises/ex2/ex2_code_framework/: CMakeLists.txt  FEMElementTri.cpp  FEMElementTri.h  FEMMesh.h  MeshViewer.cpp  MeshViewer.h  Readme.txt  SimpleFEM.cpp  SimpleFEM.h  SimpleFEMDefs.h  generateBuildLinux.sh  generateBuildOSX.sh
exercises/ex2/ex2_code_framework/Utilities/: Matrix3x3T.h  SparseLinSolverPCGT.h  SparseSymmetricDynamicRowMatrixT.h  Vector3T.h
exercises/ex2/report/: createGraphs.py  error.csv  error_convergence_analysis.xlsx  ex.aux  ex.blg  ex.tex  ex1.aux  ex1.blg  make.sh  output_error_convergence_analysis.txt  stability_analysis_damp_0.5.csv  stability_analysis_damp_0.csv
exercises/ex3/ex3_code_framework/: CMakeLists.txt  exercise.cpp  fluid2d.cpp  fluid2d.h  gauss_seidel.h  generateBuildWindows.bat  main.cpp  util.h
exercises/ex3/ex3_code_framework/GL/: freeglut_std.h  glut.h
exercises/ex3/ex3_code_framework/LodePNG/: README
exercises/ex3/ex3_code_framework/Utilities/: Array2T.h  Matrix2x2T.h  Vector2T.h
project/: readme.md
project/code/: .gitignore  CMakeLists.txt  OsgEigenMatrix.h  OsgEigenVector.h  config.h  main.cpp
project/code/data/: astronaut.mtl  sunShader - Copy.glsl  sunShader.glsl
project/code/demoScenes/: circularOrbit.json  ellipticalOrbit.json  equalMasses.json  figureEight.json  figureEightA.json  firstScene.json  gamingTest.json  iss.json  planetWithAsteroidField.json  textureTest.json
project/code/demoScenes/galaxy/: galaxy.json  main.py  main_galaxy.py  main_ring.py  scene.json  sun_asteroids.json
project/code/graphics/: CGAL.h  ConvexHull3D.cpp  ConvexHull3D.h  Edge.h  Face.h  Geometry.h  GjkAlgorithm.cpp  GjkAlgorithm.h  MinkowskiSum.cpp  MinkowskiSum.h  Simplex.cpp  Simplex.h  SupportPoint.h
project/code/osg/: FollowingRibbon.cpp  FollowingRibbon.h  GetWorldCoordOfNodeVisitor.h  ImageManager.cpp  ImageManager.h  JsonEigenConversions.h  KeyboardHandler.cpp  KeyboardHandler.h  Loader.cpp  Loader.h  ModelLoader.cpp  ModelLoader.h  ModelManager.cpp  ModelManager.h  OsgEigenConversions.h  SkyBox.cpp  SkyBox.h  SnapImageDrawCallback.cpp  SnapImageDrawCallback.h  shaders.h
project/code/osg/events/: GameKeyboardHandler.cpp  GameKeyboardHandler.h  KeyboardHandler.h  SimulationKeyboardHandler.cpp  SimulationKeyboardHandler.h
project/code/osg/particles/: EmitterUpdateCallback .cpp  EmitterUpdateCallback .h  SmokeParticleSystem.cpp  SmokeParticleSystem.h
project/code/osg/shaders/: BumpmapShader.cpp  BumpmapShader.h  CartoonShader.cpp  CartoonShader.h  Shader.cpp  Shader.h  SunShader.cpp  SunShader.h
project/code/osg/visitors/: BoundingBoxVisitor.cpp  BoundingBoxVisitor.h  ColorVisitor.cpp  ColorVisitor.h  ComputeTangentVisitor.cpp  ComputeTangentVisitor.h  ConvexHullVisitor.cpp  ConvexHullVisitor.h  GetWorldCoordOfNodeVisitor.h  TrailerCallback.cpp  TrailerCallback.h  VertexListVisitor.cpp  VertexListVisitor.h
project/code/physics/: Collision.h  CollisionManager.cpp  CollisionManager.h  NBodyManager.cpp  NBodyManager.h  SimulationManager.cpp  SimulationManager.h
project/code/precompile/: config.h.in
project/code/scene/: Asteroid.cpp  Asteroid.h  Planet.cpp  Planet.h  SceneManager.cpp  SceneManager.h  SpaceObject.cpp  SpaceObject.h  SpaceShip.cpp  SpaceShip.h  Sun.cpp  Sun.h
project/report/: index.html
project/report/resources/: index.css
